# bookmark_database_codegen

./: Cargo.toml  README.md
entities/: Cargo.toml  bookmark_collection.rs  bookmark_collection_entry.rs  mod.rs  prelude.rs  user_information.rs  vault.rs  vault_entries.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241024_224838_create_bookmark_collection_database.rs  m20241024_224838_create_vaults_database.rs  m20241024_230139_bookmark_collection_entry_table.rs  m20241024_230139_create_vault_entry_table.rs  m20241030_121715_rename_vault_entry_table.rs  m20241108_095041_removeunique_key_from_vault_entries_vault_id.rs  m20241108_111030_recreate_vault_id_colum_on_vault_entries.rs
src/: lib.rs
