[package]
name = "vault_database"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["./entities", "./migration"]

[dependencies]
entities = { path = "./entities", version = "*" }
migration = { path = "./migration", version = "*" }


[features]
default-features = ["entities"]
migration = []
entities = []
