[package]
name = "bookmark_database"
version = "0.4.0"
edition = "2021"

[workspace]
members = ["./entities", "./migration"]

[dependencies]
entities = { path = "./entities", version = "*" }
migration = { path = "./migration", version = "*" }


[features]
default-features = ["entities"]
migration = []
entities = []


[dev-dependencies]
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.41.1", features = ["full"] }

