[package]
name = "bookmark_database_codegen"
version = "0.5.3"
description = "bookmark databse migration and entities, support PostgreSQL and Sqlite"
edition = "2021"


[workspace]
members = ["./entities", "./migration"]
package.version = "0.5.3"
package.edition = "2021"
package.description = "bookmark databse migration and entities, support PostgreSQL and Sqlite"


[dependencies]
entities = { path = "./entities", version = "*" }
migration = { path = "./migration", version = "*" }


[features]
# default-features = ["entities"]
migration = []
entities = []


[dev-dependencies]
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.41.1", features = ["full"] }
